# Projet_traitement_image

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
data/donnee/: donne.csv
include/: ImageProcessor.hpp  LaserDetection.hpp
src/: ImageProcessor.cpp  LaserDetection.cpp
